<resources>
    <string name="app_name">Movie Database</string>

    <string name="show_id">#001</string>
    <string name="show_name">Show Name</string>
    <string name="show_genres_header">GÊNEROS</string>
    <string name="show_genre">Gênero</string>
    <string name="show_rating">10</string>
    <string name="show_episode">EPISÓDIO %1$s</string>
    <string name="show_season">TEMPORADA %1$s</string>
    <string name="show_resume_header">RESUMO</string>
    <string name="show_resume">Resumo da série</string>

    <string name="episode_name">Episode name</string>
    <string name="episode_season">%1$sª TEMPORADA</string>
    <string name="episode_number">%1$s° EPISÓDIO</string>
    <string name="episode_resume_header">Resumo</string>
    <string name="episode_resume">Resumo do episódio</string>

    <string name="home_label">Séries</string>
    <string name="show_detail_label">Detalhes</string>
    <string name="episode_detail_label">Episódio</string>

</resources>