<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/material_dynamic_neutral95"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_show_banner"
                style="@style/ShowHomeWallpaperImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:shapeAppearance="@style/ShowHomeWallpaperImage"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txt_show_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@+id/txt_show_id"
                android:layout_toEndOf="@+id/img_show_banner"
                android:text="@string/show_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txt_show_name"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_toStartOf="@+id/txt_show_id"
                android:layout_toEndOf="@+id/img_show_banner" />

            <ImageView
                android:id="@+id/icon_rating"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/divider"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/img_show_banner"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/txt_show_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/icon_rating"
                android:layout_alignBottom="@+id/icon_rating"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/icon_rating"
                android:text="@string/show_rating"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_show_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/show_id"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_show_summary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/txt_show_rating"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@+id/img_show_banner"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/show_resume"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>